--- a/style.css
+++ b/style.css
@@ -9,253 +9,147 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins",sans-serif;
+    list-style: none;
+    text-decoration: none;
 }
 
+/* Base Html Codes */
 body{
     position: relative;
-    min-height: 100vh;
     width: 100%;
-    overflow: hidden;
 }
+
+html::-webkit-scrollbar{
+    width: 0.8rem;
+    background-color: white;
+}
+
+html::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+
+html::-webkit-scrollbar-thumb{
+    border-radius: 3rem;
+    background-color: black;
+}
+/* Base Html Codes */
 
 /* Header Start */
-.sidebar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 78px;
+header{
     background-color: black;
-    padding: 6px 14px;
-    transition: all 0.5s ease;
 }
 
-.sidebar.active{
-    width: 240px;
-}
-
-.sidebar .logo_content .logo{
-    color: #fff;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.5s ease;
-}
-
-.sidebar.active .logo_content .logo{
-    opacity: 1;
-    pointer-events: none;
-}
-
-.logo_content .logo i{
-    color: aqua;
-    font-size: 28px;
-    margin-right: 5px;
-}
-
-.logo_content .logo .logo_name{
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.sidebar #btn{
-    position: absolute;
-    color: #fff;
-    left: 50%;
-    top: 6px;
-    font-size: 20px;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    line-height: 50px;
-    transform: translateX(-50%);
-}
-
-.sidebar.active #btn{
-    left: 90%;
-}
-
-.sidebar ul{
-    margin-top: 20px;
-}
-
-.sidebar ul li{
-    position: relative;
-    height: 50px;
-    width: 100%;
-    margin: 0 5px;
-    list-style: none;
-    line-height: 50px;
-}
-
-.sidebar ul li .tooltip{
-    position: absolute;
-    left: 122px;
-    top: 0;
-    transform: translate(-50%,-50%);
-    border-radius: 6px;
-    height: 35px;
-    width: 122px;
-    background: black;
-    color: #fff;
-    line-height: 35px;
-    text-align: center;
-    align-items: center;
-    box-shadow: 0 5px 10px rgb(0, 0, 0,0.2);
-    transition: 0s;
-    opacity: 0;
-    pointer-events: none;
-    display: block;
-}
-
-.sidebar.active ul li .tooltip{
-    display: none;
-}
-
-.sidebar ul li:hover .tooltip{
-    transition: all 0.5s ease;
-    opacity: 1;
-    top: 50%;
-}
-
-.sidebar ul li input{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    border-radius: 12px;
-    outline: none;
-    border: none;
-    background: rgb(31, 30, 30);
-    padding-left: 50px;
+a{
+    color: white;
     font-size: 18px;
-    color: #fff;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
 }
 
-.sidebar ul li .fa-sharp{
-    position: relative;
-    z-index: 99;
-    color: #fff;
-    font-size: 22px;
-    transition: all 0.5s ease;
-}
-
-.sidebar ul li .fa-sharp:hover{
-    background: #fff;
-    color: rgb(31, 30, 30);
-}
-
-.sidebar ul li a{
-    color: #fff;
+.navbar{
+    min-height: 70px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    text-decoration: none;
-    transition: all 0.4s ease;
-    border-radius: 12px;
-    white-space: nowrap;
+    padding: 0 24px;
 }
 
-.sidebar ul li a:hover{
-    color: black;
-    background: #fff;
-}
-
-.sidebar ul li i{
-    height: 50px;
-    min-width: 50px;
-    border-radius: 12px;
-    line-height: 50px;
-    text-align: center;
-}
-
-.sidebar .links_name{
-    opacity: 0;
-    pointer-events: none;
-}
-
-.sidebar.active .links_name{
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.sidebar .profile_content{
-    position: absolute;
-    color: #fff;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-.sidebar .profile_content .profile{
-    position: relative;
-    padding: 5px 10px;
-    height: 60px;
-    background: none;
-    transition: all 0.4s ease;
-}
-
-.sidebar.active .profile_content .profile{
-    background: rgb(31, 30, 30);
-}
-
-.profile_content .profile .profile_details{
-    display: flex;
-    align-items: center;   
-    opacity: 0;
-    pointer-events: none;
-    white-space: nowrap;
-}
-
-.sidebar.active .profile .profile_details{
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.profile .profile_details img{
-    height: 45px;
-    width: 45px;
-    object-fit: cover;
-    border-radius: 12px;
-}
-
-.profile .profile_details .name_job{
+nav #world{
+    color: skyblue;
     margin-left: 10px;
-}
-
-.profile .profile_details .name{
-    font-size: 15px;
-    font-weight: 400;
-}
-
-.profile .profile_details .job{
-    font-size: 12px;
-}
-
-.profile #log_out{
-    position: absolute;
-    left: 50%;
-    bottom: 5px;
-    transform: translateX(-50%);
+    font-size: 35px;
     min-width: 50px;
-    line-height: 50px;
-    font-size: 20px;
     border-radius: 12px;
+    line-height: 50px;
     text-align: center;
+}
+
+.nav-menu{
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    transition: all 0.4s ease;
-    background: rgb(31, 30, 30);
-    margin-bottom: 5px;
+    gap: 60px;
 }
 
-.sidebar.active .profile #log_out{
-    left: 88%;
+.nav-branding{
+    font-size: 2rem;
 }
 
-.sidebar.active .profile #log_out{
-    background: none;
+.nav-link{
+    transition: 0.7s ease;
+}
+
+.nav-link:hover{
+    color: skyblue;
+}
+
+.nav{
+    display: none;
+    cursor: pointer;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;
+    background-color: white;
 }
 /* Header End */
+
+/* Responsive Start */
+@media (max-width:1048px) {
+    .logo{
+        font-size: 31px;
+        padding-left: 60px;
+    }
+
+    .nav-menu{
+        margin-right: 20px;
+    }
+
+    a{
+        font-size: 17px;
+    }
+}
+
+@media (max-width:768px) {
+    .nav{
+        display: block;
+    }
+
+    .nav.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .nav.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .nav.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: rgb(33, 32, 32);
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+    
+    .nav-item{
+        margin: 16px 0;
+    }
+
+    .nav-menu.active{
+        left: 0;
+    }
+}
+/* Responsive End */
