--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px;
 }
 
 h2{
@@ -187,6 +188,14 @@ input:valid ~ label{
     top: 20px;
 }
 
+.input i{
+    position: absolute;
+    right: 8px;
+    color: #fff;
+    font-size: 1.2em;
+    top: 20px;
+}
+
 .forget{
     margin: -15px 0 15px;
     font-size: .9em;
@@ -213,6 +222,7 @@ input:valid ~ label{
 }
 
 .giris button{
+    color: #000;
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -226,6 +236,10 @@ input:valid ~ label{
 }
 
 #signUp{
+    color: darkgray;
+}
+
+#login{
     color: darkgray;
 }
 
@@ -557,12 +571,22 @@ p{
 }
 
 @media (max-width:850px) {
+    .giris{
+        display: inline-block;
+        min-height: 130vh;
+    }
+
+    .form-box{
+        margin: auto;
+        margin-bottom: 10px;
+    }
+
     .nav-menu{
         margin-right: 10px;
     }
 
     .nav-item a{
-        font-size: 11px;    
+        font-size: 13.2px;    
     }
 }
 
